fix(lakehouse): fix NOT LIKE predicate pushdown and share DataFusion memory pool via -D flags
Two fixes:

1. CalciteToIcebergPredicateConverter: NOT(unsupported) like NOT LIKE was
   producing alwaysFalse (NOT of alwaysTrue), incorrectly pruning all
   Iceberg manifest files and returning empty results. Now checks if
   the inner expression is alwaysTrue before negating.

2. DataFusionPlugin: make DataFusionService static and shared across
   plugin/SPI instances. Both createComponents() and ensureDataFusionService()
   now read datafusion_memory_pool_limit_bytes and datafusion_spill_memory_limit_bytes
   from JVM system properties (-D flags) via getConfiguredLong(), enabling
   memory pool and spill-to-disk configuration without opensearch.yml changes.